  * Updated README to reflect current location of template SQL files.
    (closes: #575622)
  * Postrm was assigned to the wrong package (postgis), which caused 
    unexpected behavior on purging. Now each purge of postgresql-*-postgis will
    cause extension removal.
    (closes: #596663)
  * Added PostgreSQL 9.1 support. New patch lwgeom_accum added 
    for supporting 9.1.
    (closes: #633111, #639474)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 15 Sep 2011 13:01:50 +0200

postgis (1.5.2-1) unstable; urgency=low

  * New upstream release, with a few bug fixes.
  * Added shp2pgsql-gui binary.
  * Removed patches, applied upstream: getopt.	

 -- Alan Boudreault <aboudreault@mapgears.com>  Wed, 29 Sep 2010 09:16:10 -0400

postgis (1.5.1-5) unstable; urgency=high

  * This version requires geos >= 3.1.1, debian/control updated.
    (closes: #580462)
  * Moved libpostgis-java to java section.
  * README.Debian has been fixed for old lwpostgis.sql since ages. Just ack.
    (closes: #575622)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 24 May 2010 09:40:32 +0200

postgis (1.5.1-4) unstable; urgency=high

  * [PATCH] getopt.dpatch added to avoid var collisions among Postgis getopt
    and glibc one. That solves a FTBS on mips/mipsel.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sat, 22 May 2010 19:03:39 +0200

postgis (1.5.1-3) unstable; urgency=medium

  * Removed custom CFLAGS which probably caused FTBS on mips/mipsel archs.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sat, 22 May 2010 11:20:44 +0200

postgis (1.5.1-2) unstable; urgency=low

  * Added generator.dpatch to avoid a buffer overflow on alpha due to 
    a too narrow buffer apparently.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 17 May 2010 14:21:37 +0200

postgis (1.5.1-1) unstable; urgency=low

  * New upstream release, with a few bug fixes.

 -- Alan Boudreault <aboudreault@mapgears.com>  Sun, 16 May 2010 14:42:21 -0400
