@@ -11,7 +11,7 @@ postgresql-N.M-postgis
   SQL script which contains the OpenGIS Spatial References 
   (spatial_ref_sys.sql).
 
-    DIR=/usr/share/postgresql/*/contrib/postgis*
+    DIR=/usr/share/postgresql/*/contrib/postgis-*
   	psql -d [yourdatabase] -f $DIR/postgis.sql
   	psql -d [yourdatabase] -f $DIR/spatial_ref_sys.sql
 
@@ -73,8 +73,9 @@ Type as root:
   createlang plpgsql -d <databasename>
 
   # Finally, load the functions and reference system tables
-  psql <databasename> -f /usr/share/postgresql/*/contrib/postgis*/postgis.sql
-  psql <databasename> -f /usr/share/postgresql/*/contrib/postgis*/spatial_ref_sys.sql
+  psql <databasename> -f /usr/share/postgresql/*/contrib/postgis-*/postgis.sql
+  psql <databasename> -f /usr/share/postgresql/*/contrib/postgis-*/spatial_ref_sys.sql
+
 
   # login in new database (still as superuser postgres)
   psql <databasename>
@@ -118,8 +119,8 @@ geodatabase, type as root:
   createlang plpgsql -d template_gis
 
   # Finally, load the functions and reference system tables
-  psql template_gis -f /usr/share/postgresql/*/contrib/postgis*/postgis.sql
-  psql template_gis -f /usr/share/postgresql/*/contrib/postgis*/spatial_ref_sys.sql
+  psql template_gis -f /usr/share/postgresql/*/contrib/postgis-*/postgis.sql
+  psql template_gis -f /usr/share/postgresql/*/contrib/postgis-*/spatial_ref_sys.sql
 
   # login in new database (still as superuser postgres)
   psql template_gis
